Do not inherit security manager and forking for all modules...