@@ -153,12 +153,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.16</version>
-				<configuration>
-					<argLine><![CDATA[-Djava.security.manager -Djava.security.policy=src/test/resources/proactive.java.policy]]></argLine>
-					<!-- Run unit tests in single JVM and do not reuse; otherwise Prolog JNI (JPL) causes problems :stuehmer -->
-					<forkCount>1</forkCount>
-					<reuseForks>false</reuseForks>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
